--- a/index.css
+++ b/index.css
@@ -1,4 +1,55 @@
 body{
     background-color: black;
-    color: rgb(15, 128, 15);
+}
+
+.header {
+    background-color: rgb(22, 20, 20);
+    display: flex;
+    align-items: baseline;
+}
+
+.homepage, .products {
+    border: none;
+    background: none;
+    color: white;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-menu{
+    position: absolute;
+    left: 0;
+    top: calc(100% + .25rem);
+    background-color: rgb(22, 20, 20);
+    padding: .75rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .1);
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.dropdown > .products:focus + .dropdown-menu {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.information-grid {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    gap: 2rem;
+}
+
+.dropdown-links {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem
 }
